--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,9 @@
     "@shopify/shopify-app-express": "^2.1.3",
     "@shopify/shopify-app-session-storage-sqlite": "^1.2.3",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
